--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/src/cmd/todo"
+      "program": "${workspaceFolder}/src/cmd/todod"
     }
   ]
 }
