--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/src/cmd/todod"
+      "program": "${workspaceFolder}/src/cmd/todod",
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
