Making sure, the latest images are used on k8s

--- a/k8s/todod/deployment.yaml
+++ b/k8s/todod/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         # This is the todod Pod
         - name: todod
-          image: k8s-lab/todod
+          image: k8s-lab/todod:latest
           # Since the todod container image
           # gets built inside minikube's docker daemon
           # then, we need to make sure that this cluster
