--- a/k8s/todod/service.yaml
+++ b/k8s/todod/service.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: k8s-lab
 spec:
   selector:
-    app: todod
+    app: todod-pod
   type: NodePort
   ports:
     - name: todod-svc
