--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,9 @@
       "hostName": "192.168.64.4", // this doesn't work across restarts
       "hostPort": "30800"
     }
+  },
+  "vs-kubernetes": {
+    "vs-kubernetes.namespace": "k8s-lab",
+    "vs-kubernetes.kubeconfig": "${workspaceFolder}/files/local/k8s/users/k8s-lab-admin.kubeconfig",
   }
 }
