--- a/files/remote/containerd/config.toml
+++ b/files/remote/containerd/config.toml
@@ -169,6 +169,10 @@ config_path = ""
 
 [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
 
+# Add the registry located in the control plane node
+[plugins."io.containerd.grpc.v1.cri".registry.mirrors."192.168.0.11:5000"]
+endpoint = ["http://192.168.0.11:5000"]
+
 [plugins."io.containerd.grpc.v1.cri".x509_key_pair_streaming]
 tls_cert_file = ""
 tls_key_file = ""
