Update VS Code settings to include applyManifests configuration for Kubernetes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
   "vs-kubernetes": {
     "vs-kubernetes.namespace": "k8s-lab",
     "vs-kubernetes.kubeconfig": "${workspaceFolder}/files/local/k8s/users/k8s-lab-admin.kubeconfig",
+    "vs-kubernetes.applyManifests": [
+      "${workspaceFolder}/k8s/"
+    ]
   }
 }
