Update namespace in deployment and service files to 'todo' and add namespace.yaml

--- a/k8s/todod/deployment.yaml
+++ b/k8s/todod/deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todod-deploy
-  namespace: k8s-lab
+  namespace: todo
 spec:
   replicas: 3
   selector:
