--- a/k8s/todod/service.yaml
+++ b/k8s/todod/service.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todod-svc
-  namespace: k8s-lab
+  namespace: todo
 spec:
   selector:
     app: todod-pod
