--- a/k8s/todod/deployment.yaml
+++ b/k8s/todod/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         # This is the todod Pod
         - name: todod-pod
           image: 192.168.0.11:5000/k8s-lab/todod:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           resources:
