Add Ingress resource configuration for NGINX controller

--- a/k8s/manifests/ingress.yaml
+++ b/k8s/manifests/ingress.yaml
@@ -16,7 +16,6 @@ spec:
             backend:
               service:
                 name: todod
-                namespace: todo
                 port:
-                  number: todo.todod-port
+                  number: 8000
             path: /
