Add KUBECONFIG environment variable for integrated terminal in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "vs-kubernetes.applyManifests": [
       "${workspaceFolder}/k8s/"
     ]
-  }
+  },
+  "terminal.integrated.env.windows": {
+    "KUBECONFIG": "${workspaceFolder}/files/local/k8s/users/k8s-lab-admin.kubeconfig"
+  },
 }
