Add REST Client extension to VSCode recommendations for improved API testing

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "ms-azuretools.vscode-docker",
         "golang.go",
         // Kubernetes
-        "ms-kubernetes-tools.vscode-kubernetes-tools"
+        "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "humao.rest-client"
     ]
 }
