--- a/config.example.yaml
+++ b/config.example.yaml
@@ -5,13 +5,12 @@ vm_cplane_cpus: 2 # Number of CPUs for control plane node (default: 2)
 vm_wnodes_cpus: 2 # Number of CPUs for worker nodes (default: 2)
 vm_wnodes_mem: 2048 # Memory for worker nodes in MB (default: 2048)
 vm_cplane_mem: 2048 # Memory for control plane node in MB (default: 2048)
-k8s_num_worker_nodes: 1 # Number of worker nodes in the cluster (default: 0)
 
 # IP addresses for member of the Kubernetes cluster
 # A private network is used for the cluster
 # All IPs must be in the same subnet
 # Netmask is assumed to be /24
-k8s_api_server_ip: "192.168.128.100" # IP address for the Kubernetes API server
+k8s_cplane_addr: "192.168.128.100" # IP address for the Kubernetes API server
 k8s_load_balancer_ip: "192.168.128.60" # IP address for the load balancer (MetalLB)
 
 # IP addresses for worker nodes
