--- a/config.example.yaml
+++ b/config.example.yaml
@@ -12,6 +12,7 @@ vm_cplane_mem: 2048 # Memory for control plane node in MB (default: 2048)
 # Netmask is assumed to be /24
 k8s_cplane_addr: "192.168.128.100" # IP address for the Kubernetes API server
 k8s_lb_addr: "192.168.128.60" # IP address for the load balancer (MetalLB)
+k8s_pod_network_cidr: "10.0.0.0/8" # CIDR for the pod network
 
 # IP addresses for worker nodes
 # The number of IPs must match the number of worker nodes
